--- a/docker=build-push-to-acr-deploy-to-aks.yml
+++ b/docker=build-push-to-acr-deploy-to-aks.yml
@@ -28,8 +28,8 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+    pool: 'TestAgentPool'
+      #vmImage: $(vmImageName)
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
