Update docker manifests

--- a/docker=build-push-to-acr-deploy-to-aks.yml
+++ b/docker=build-push-to-acr-deploy-to-aks.yml
@@ -41,8 +41,8 @@ stages:
         tags: |
           $(tag)
 
-    - upload: manifests
-      artifact: manifests
+    - upload: kube-manifests
+      artifact: kube-manifests
 
 - stage: Deploy
   displayName: Deploy stage
