docker-acr-manual-deployment

--- a/docker-acr-manual.yml
+++ b/docker-acr-manual.yml
@@ -37,6 +37,9 @@ stages:
         tags: |
           $(tag)
 
+    - bash: echo Contents in System Default Working Directory; ls -R $(System.DefaultWorkingDirectory)        
+    - bash: echo Before copying Contents in Build Artifact Directory; ls -R $(Build.ArtifactStagingDirectory) 
+    
     - task: CopyFiles@2
       inputs:
         SourceFolder: '''$(System.DefaultWorkingDirectory)/kube-manifests'
