--- a/devopsaks01.yml
+++ b/devopsaks01.yml
@@ -33,7 +33,7 @@ stages:
          inputs:
            SourceFolder: '$(System.DefaultWorkingDirectory)/kube-manifests'
            Contents: '**'
-           TargetFolder: '$(Build.ArtifactsDirectory)'
+           TargetFolder: '$(Build.ArtifactStagingDirectory)'
            OverWrite: true
 
        - task: PublishBuildArtifacts@1
