--- a/kube-manifests/Deployment-SPN-Secrets.yaml.yml
+++ b/kube-manifests/Deployment-SPN-Secrets.yaml.yml
@@ -52,3 +52,51 @@
 #   ports:
 #     - port: 80
 #       targetPort: 80
+
+
+
+
+############################
+## Deployment file ##
+############################
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: app5-aks-deployment
+#   labels:
+#     app: app5-aks
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: app5-aks
+#   template:
+#     metadata:
+#       labels:
+#         app: app5-aks
+#     spec:
+#         containers:
+#           - name: acrdemo-aks-docker
+#             image: acr01sade.azurecr.io/custom2aksnginxapp2:v1
+#             imagePullPolicy: Always
+#             ports:
+#               - containerPort: 80
+#         # imagePullSecrets: # update secret name created 
+#         #   - name: acrsade-secret 
+
+# ---
+
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: app5-aks-service
+#   labels:
+#     app: app5-aks
+# spec:
+#   type: LoadBalancer
+#   selector:
+#     app: app5-aks
+#   ports:
+#     - port: 80
+#       targetPort: 80
